docs: surefire configuration notes (#15)
Co-authored-by: Dustin Byrne <dustinsbyrne@gmail.com>